--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>Artykuly</title>
 </head>
 <body>
 
-<div class="col-sm-4" action="/show" method="get">
-    <label ><a href="/show">Wyswietl wszystkie produkty</a></label>
-</div>
+<h3 method="get" action="/show"> <a>Wyswietl wszystkie produkty</a> </h3>
+
 
 </body>
 </html>
