--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 
-<h3 method="get" action="/show"> <a>Wyswietl wszystkie produkty</a> </h3>
-
+<form method="get" action="/show">
+    <button type="submit">Wyswietl wszystkie produkty</button>
+</form>
 
 </body>
 </html>
