--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form method="get" action="/show">
+<form method="get" action="/listAll">
     <button type="submit">Wyswietl wszystkie produkty</button>
 </form>
 
