--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Artykuly</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
 
     <form method="get" action="/listAll">
-        <button type="submit">Wyswietl wszystkie produkty</button>
+        <button type="submit">Wyswietl wszystkie produkty</button></form><br/>
     </form>
 
+
+    <form method="post" action="/add">
+        <div class="form-group row borderLines">
+            <label class="col-sm-2 col-form-label">Name</label>
+            <div class="col-6">
+                <input type="text" class="form-control" placeholder="Name" minlength="3" maxlength="10" required name="firstName">
+            </div>
+        </div>
+        <div class="form-group row borderLines">
+            <label class="col-sm-2 col-form-label">Price</label>
+            <div class="col-6">
+                <input type="number" class="form-control" placeholder="Price" minlength="1" maxlength="10" required name="price">
+            </div>
+        </div>
+
+        <div class="form-group col-sm-8">
+            <select class="form-control" id="exampleFormControlSelect1" required >
+                <option selected disabled>Wybierz</option>
+                <option>GROCERY</option>
+                <option>HOUSEHOLD</option>
+                <option>OTHER</option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary borderLines">Submit</button>
+    </form>
 </body>
 </html>
